src/styles/elements/_inpage-nav.css
/* ... */
.inpage-nav__item {
    width: var(--inpage-nav-item-width);
    height: var(--inpage-nav-item-height);
    display: var(--inpage-nav-item-display);
    align-items: var(--inpage-nav-item-align-items);
}

.inpage-nav__link {
    position: var(--inpage-nav-link-position);
    text-decoration: var(--inpage-nav-link-text-decoration);
    font-weight: var(--inpage-nav-link-font-weight);
    color: var(--inpage-nav-link-color);
    height: var(--inpage-nav-link-height);
    display: var(--inpage-nav-link-display);
    align-items: var(--inpage-nav-link-align-items);
    padding: var(--inpage-nav-link-padding);
}

a.inpage-nav__link:hover {
    --inpage-nav-link-after-opacity: 1;

    color: var(--inpage-nav-link-color-hover);
}

.inpage-nav__link::after {
    content: "";
    width: var(--inpage-nav-link-after-width);
    height: var(--inpage-nav-link-after-height);
    background-color: var(--inpage-nav-link-after-bg-color);
    position: var(--inpage-nav-link-after-position);
    bottom: var(--inpage-nav-link-after-bottom);
    left: var(--inpage-nav-link-after-left);
    opacity: var(--inpage-nav-link-after-opacity);
    pointer-events: none;
}

.inpage-nav[element-design="default"] .inpage-nav__item[active] .inpage-nav__link {
    --inpage-nav-link-after-opacity: 1;
}

.inpage-nav[ismobile] .inpage-nav__item[active] .inpage-nav__link {
    --inpage-nav-link-after-opacity: 0;
    --inpage-nav-link-color: var(--color-primary-dark);
}

.inpage-nav:not([ismobile]) .inpage-nav__item[active] .inpage-nav__link {
    background-color: var(--inpage-nav-link-bg-color);
}

.inpage-nav[ismobile][element-design="secondary"] .inpage-nav__item[active] .inpage-nav__link {
    --inpage-nav-link-color: var(--color-secondary-dark);
}

.inpage-nav[ismobile][element-design="inverted"] .inpage-nav__item[active] .inpage-nav__link {
    --inpage-nav-link-color: var(--color-primary);
}

.inpage-nav[ismobile] .inpage-nav__nav {
    pointer-events: none;
    opacity: 0;
    border: 10px solid red;
}

.inpage-nav[ismobile][mobileopen] .inpage-nav__nav {
    pointer-events: all;
    border: 10px solid blue;
}

@media (hover: hover) {
    .inpage-nav[ismobile] .inpage-nav__toggle:hover {
        --inpage-nav-toggle-icon-color: var(--color-primary-dark);

        cursor: pointer;
    }

    .inpage-nav[ismobile][element-design="secondary"] .inpage-nav__toggle:hover {
        --inpage-nav-toggle-icon-color: var(--color-secondary-dark);
    }

    .inpage-nav[ismobile][element-design="inverted"] .inpage-nav__toggle:hover {
        --inpage-nav-toggle-icon-color: var(--color-primary);
    }

    .button.inpage-nav__cta:hover {
        background-color: var(--inpage-nav-cta-bg-color-hover);
        color: var(--inpage-nav-cta-color-hover);
    }

    a.inpage-nav__link:hover {
        --inpage-nav-link-after-opacity: 1;

        color: var(--inpage-nav-link-color-hover);
    }

    .inpage-nav[ismobile] a.inpage-nav__link:hover {
        --inpage-nav-link-after-opacity: 0;

        color: var(--color-primary-dark);
    }

    .inpage-nav[ismobile][element-design="secondary"] .inpage-nav__link:hover {
        color: var(--color-secondary-dark);
    }

    .inpage-nav[ismobile][element-design="inverted"] .inpage-nav__link:hover {
        color: var(--color-primary);
    }

    .inpage-nav:not([ismobile], [element-design="default"]) .inpage-nav__link:hover {
        --inpage-nav-link-after-opacity: 0;
    }

    .inpage-nav:not([ismobile], [element-design="default"]) .inpage-nav__item[active] .inpage-nav__link:hover {
        color: var(--color-bg);
    }
}

